This file includes only a short list of the changes between MPC-HC's versions.
For the older changes see:
https://github.com/mpc-hc/mpc-hc/blob/master/docs/Changelog_old.txt

Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
+ ISR: Add an option to control subtitle renderer behavior regarding anamorphic video
+ VSFilter: Display more informative names for external subtitles (similar to what is done with the internal subtitle renderer)
+ Add a "Copy to clipboard" feature to the "Play > Filters" menu so that the list of currently loaded filters can be copied easily
* Ticket #4144, Move the user interface language selection to the Options dialog and remove the "Language" menu.
  The increasing number of translations had reduced the usability of the menu
* Updated Little CMS to v2.6 (git 4da8703)
* Updated Unrar to v5.1.4
* Updated LAV Filters to v0.61.2.14:
    - Ticket #3575, LAV Splitter: Alternate audio support for HLS
    - Ticket #4326, LAV Splitter: No subtitles were displayed when using the special "Forced subtitles" track created for PGS subtitles
    - LAV Video: Support VP7 video
    - LAV Video: Use the MediaFondation WMV decoder on Windows 7+ instead of the DMO WMV decoder
* Updated Armenian, Basque, Belarusian, Bengali, British English, Catalan, Chinese (simplified and traditional), Croatian,
  Czech, Dutch, French, Galician, German, Greek, Hebrew, Hungarian, Italian, Japanese, Korean, Malay, Polish, Portuguese (Brazil),
  Romanian, Russian, Slovak, Slovenian, Spanish, Swedish, Tatar, Turkish, Ukrainian and Vietnamese translations
* Don't use auto-zoom feature when the window was positioned using the Aero Snap
! The dockable bars were not updated when changing the UI language
! Statusbar: Fixed occasional flickering of text and media type icon
! Ticket #34, VSFilter/ISR: Override placement feature was not working even if enabled