@@ -260,6 +260,10 @@ bool CDX7SubPicAllocator::Alloc(bool fStatic, ISubPic** ppSubPic)
         return false;
     }
 
+    if (m_maxsize.cx <= 0 || m_maxsize.cy <= 0) {
+        return false;
+    }
+
     CAutoLock cAutoLock(this);
 
     DDSURFACEDESC2 ddsd;
