@@ -54,6 +54,10 @@ protected:
     bool m_bDeviceResetRequested;
     bool m_bPendingResetDevice;
 
+    enum SubtitleTextureLimit {
+        STATIC, VIDEO, DESKTOP
+    };
+    SubtitleTextureLimit m_SubtitleTextureLimit;
     void InitMaxSubtitleTextureSize(int maxSize, CSize desktopSize);
 
     void AlphaBltSubPic(const CRect& windowRect, const CRect& videoRect, SubPicDesc* pTarget = nullptr);
