@@ -11,6 +11,7 @@ Legend:
 next version - not released yet
 ===============================
 + ISR: Add an option to control subtitle renderer behavior regarding anamorphic video
++ ISR: Add an option to render subtitles at the source video resolution like VSFilter.
 + VSFilter: Display more informative names for external subtitles (similar to what is done with the internal subtitle renderer)
 + Add a "Copy to clipboard" feature to the "Play > Filters" menu so that the list of currently loaded filters can be copied easily
 * Ticket #4144, Move the user interface language selection to the Options dialog and remove the "Language" menu.
